# maguffin

./: HOWTOAI.md  PROGRESS.md  PROJECTSTATE.md  README.md  REQUIREMENTS.md  SOLUTIONPLAN.md
.github/: copilot-instructions.md
.github/agents/: bug-fix-agent.md  code-architect.md  code-documenter.md  devops-engineer.md  feature-developer.md  implementation-planner.md  qa-engineer.md  release-manager.md  requirements-analyst.md  sdlc-manager.md  technical-writer.md  test-specialist.md
.github/workflows/: ci.yml  release.yml
docs/: Agent-Handoff-and-Ownership.md
docs/adr/: ADR-001-ui-framework-selection.md  ADR-002-git-integration-approach.md
maguffin-app/: index.html  package-lock.json  package.json  vite.config.ts
maguffin-app/src/: App.tsx  styles.css
maguffin-app/src-tauri/: Cargo.toml  tauri.conf.json
maguffin-app/src-tauri/benches/: benchmarks.rs
maguffin-app/src-tauri/src/: lib.rs  main.rs
maguffin-app/src-tauri/src/cache/: mod.rs
maguffin-app/src-tauri/src/commands/: mod.rs
maguffin-app/src-tauri/src/config/: mod.rs
maguffin-app/src-tauri/src/domain/: mod.rs
maguffin-app/src-tauri/src/domain/auth/: mod.rs
maguffin-app/src-tauri/src/domain/pr/: mod.rs
maguffin-app/src-tauri/src/domain/repo/: mod.rs
maguffin-app/src-tauri/src/domain/stack/: mod.rs
maguffin-app/src-tauri/src/domain/sync/: mod.rs
maguffin-app/src-tauri/src/domain/template/: mod.rs
maguffin-app/src-tauri/src/error/: mod.rs
maguffin-app/src-tauri/src/git/: mod.rs
maguffin-app/src-tauri/src/github/: auth_service.rs  mod.rs  pr_service.rs  stack_service.rs  sync_service.rs
maguffin-app/src-tauri/src/github/queries/: mod.rs
maguffin-app/src-tauri/src/keyring/: mod.rs
maguffin-app/src-tauri/src/provider/: mod.rs
maguffin-app/src/components/: AuthView.test.tsx  AuthView.tsx  CheckStatus.test.tsx  CheckStatus.tsx  ConflictResolutionDialog.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  KeyboardShortcutsHelp.tsx  Markdown.test.tsx  Markdown.tsx  OnboardingFlow.tsx  PRDashboard.tsx  PRDetailPanel.tsx  PullRequestCard.test.tsx  PullRequestCard.tsx  RepoSelector.tsx  RestackPreviewDialog.tsx  StackView.tsx  (+7 more)
(+13 files in other folders)
